--- a/labs/02/continuewatch/build.gradle
+++ b/labs/02/continuewatch/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    ext.kotlin_version = "1.5.30"
 }
 
 task clean(type: Delete) {
